[metadata]
name = fs.youtube
version = 0.3.1
author = Merlin Kessler
author-email = m3rlink@gmx.de
home-page = https://github.com/media-proxy/fs.youtube
description = Youtube Filesystem for PyFilsystem2
long-description = file: README.rst
license = MIT
license-file = LICENSE
platform = any
keywords = filesystem, Pyfilesystem2, pafy, youtube
classifiers =
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: System :: Filesystems

[options]
zip_safe = true
include_package_data = true
python_requires = >= 2.7, != 3.0.*, != 3.1.*, != 3.2.*, != 3.3.*, != 3.4.*
packages =
    fs.youtube
    fs.opener
test_suite = tests
setup_requires = setuptools==67.8.0
install_requires =
  fs~=2.4.11
  pafy~=0.5.4
  youtube-dl>=2019.9.28
tests_require =
  fs.youtube[test]

[bdist_wheel]
universal = 1

[options.entry_points]
fs.opener =
    youtube = fs.opener.youtubefs:YouTubeOpener

[options.extras_require]
dev =
	docutils==0.15.2
	Pygments==2.4.2
	codecov==2.0.15
test =
	green==3.0.0
	coverage==4.5.4
	mock==3.0.5; python_version < "3.3"

[coverage:report]
show_missing = true
exclude_lines =
        pragma: no cover
        @abc.abstractmethod
        @abc.abstractproperty
        raise NotImplementedError
        return NotImplemented
        if six.PY3
        if six.PY2

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = true

[pydocstyle]
inherit = false
ignore = D100,D200,D203,D213,D406,D407

